# voidstrike

./: .env.example  .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml
benchmark/: aggregate.py  ci_easy.py  lab.py  nightly_full.py  xbow.py
benchmark/data/: lab_targets.json
docs/: architecture.md  runbook.md
docs/examples/: ctf-htb.yaml  engagement-real.yaml  htb-challenge.yaml  lab-prolabs.yaml  metasploitable.yaml
infra/: Dockerfile.browser  Dockerfile.kali  Dockerfile.python  docker-compose.ops.yml  docker-compose.vpn.yml  docker-compose.yml  litellm-bootstrap.py  litellm-config.yaml  postgres-init.sql  sandbox-entrypoint.sh
skills/ad/ad-attack-paths/: SKILL.md
skills/analyst/attack-mapping/: SKILL.md
skills/browser/auth-flow-testing/: SKILL.md
skills/exploit/ad-foothold/: SKILL.md
skills/exploit/file-staging/: SKILL.md
skills/exploit/generate-payload-matrix/: SKILL.md
skills/exploit/metasploit-non-interactive/: SKILL.md
skills/exploit/netexec/: SKILL.md
skills/exploit/poc-trust-evaluation/: SKILL.md
skills/exploit/prebuilt-exploit-binaries/: SKILL.md
skills/exploit/reverse-shell-cheatsheet/: SKILL.md
skills/exploit/searchsploit-workflow/: SKILL.md
skills/postex/binary-fetch-and-drop/: SKILL.md
skills/postex/credential-loot/: SKILL.md
skills/postex/hash-cracking/: SKILL.md
skills/postex/linux-privesc/: SKILL.md
skills/postex/local-web-port-forward/: SKILL.md
skills/postex/privesc-verify/: SKILL.md
skills/postex/windows-privesc/: SKILL.md
skills/researcher/cve-deep-dive/: SKILL.md
skills/surface/ffuf-recipes/: SKILL.md
skills/surface/injection-probing/: SKILL.md
skills/surface/nmap-tradecraft/: SKILL.md
skills/surface/vhost-enum/: SKILL.md
skills/surface/web-tech-fingerprinting/: SKILL.md
src/: __init__.py
src/agent/: attack_mapping.py  challenge.py  lab_state.py  main.py  models.py  parallel_enum.py  profile.py  report.py  roe_document.py  tools.py
src/agent/backends/: __init__.py  kali_sandbox.py
src/agent/middleware/: __init__.py  _util.py  action_class.py  block_fs_tools.py  (+21 more)
src/auth/: oauth.py
src/cli/: main.py
src/etl/: extractors.py  graphiti_sink.py  log_to_graph.py
src/gateway/: main.py
src/integrations/: __init__.py  htb.py
src/schemas/: __init__.py  engagement.py  episodes.py  findings.py
tests/: conftest.py
tests/unit/: _fake_tools.py  test_action_class.py  test_attach_stream.py  test_attack_mapping.py  test_block_fs_tools.py  test_browser_read_dom.py  test_budget_guard.py  test_cancel_all.py  test_cancellation.py  test_challenge_cli.py  test_challenge_runner.py  test_cli_render.py  test_cli_vpn.py  test_command_logger.py  test_compose_consistency.py  test_debug_log.py  test_exploit_server.py  test_extractors.py  test_flag_completion.py  test_fuzz_guard.py  test_gateway_kickoff.py  test_gateway_pause_resume.py  test_gateway_read_endpoints.py  test_gateway_safe.py  test_hitl_interrupt.py  test_htb_client.py  test_htb_provision.py  test_http_stall_guard.py  test_idle_read_guard.py  test_lab_state.py  test_ls.py  test_mcp_modules.py  test_model_retry.py  test_models_helpers.py  test_modes.py  test_no_progress_guard.py  test_oauth.py  test_parallel_enum.py  test_postex_server.py  test_profile.py  (+32 more)
web/: Dockerfile  package.json
web/app/: layout.tsx  page.tsx
web/lib/: gateway.ts
(+33 files in other folders)
