[project]
name = "voidstrike"
version = "0.1.0"
description = "Autonomous offensive security agent"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-mcp-adapters>=0.1",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "langchain-google-genai>=2.0",
    "mcp>=1.2",
    "pydantic>=2.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.12",
    "rich>=13.9",
    "httpx>=0.27",
    "playwright>=1.48",
    "psycopg[binary,pool]>=3.2",
    "neo4j>=5.25",
    "graphiti-core>=0.3",
    "redis>=5.2",
    "litellm>=1.50",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "ipython>=8.29",
]

[project.scripts]
voidstrike = "src.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
# E701: deliberate compact guard clauses / status-map one-liners in the CLI renderer.
# B008: idiomatic Typer/FastAPI defaults (typer.Option/Argument, File()/Form()).
# N818: exception names are intentional (RoEViolation, MissingSignedRoE, ...).
ignore = ["E501", "E701", "B008", "N818"]

[tool.ruff.lint.per-file-ignores]
# Tests use descriptive non-snake-case names and compact one-liners on purpose.
"tests/**" = ["E702", "N802", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
